# pycon-schedule-concierge

./: .gitignore  pyproject.toml  requirements.txt
clepy-may-2024/: Build data applications with Streamlit: From Script to Web App in Minutes.md
pycongpt/: 01_Home.py  config.py  load_data.py
pycongpt/pages/: 02_Intro.py  03_Graph.py  04_PyCon_Concierge.py
